<resources>
    <string name="app_name">Music Listen App</string>
    <string name="client_id" translatable="false">551477097001-f9r2oovmaklaq4mdv49ud82rdp60lh07.apps.googleusercontent.com</string>
    <string name="search_bar_hint">Search song or artist</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="full_name">Full name</string>
    <string name="disconnected">Internet connection not found!</string>
    <string name="offline">You are offline!</string>
    <string name="home">Home</string>
    <string name="downloads">Downloads</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="playlist">Playlist</string>
    <string name="give_your_playlist_a_name">Give your playlist a name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="playlist_name">Enter playlist name</string>
    <string name="successfully_registered">Successfully registered!</string>
    <string name="download">Download</string>
    <string name="add_favorites">Add Favorites</string>
    <string name="remove_favorites">Remove Favorites</string>
    <string name="add_playlist">Add playlist</string>
    <string name="music">Music</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="added_favorites">Added to favorites!</string>
    <string name="removed_from_favorites">Removed from favorites!</string>
    <string name="successfully_downloaded"> successfully downloaded!</string>
    <string name="file_not_found">File not found</string>
    <string name="email_sent">Email sent</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="welcome">Welcome</string>
    <string name="user_registration_successful">User registration successful</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="music_download">Music downloading…</string>
    <string name="image_download">Image downloading…</string>
    <string name="cover_image">Cover Image</string>

</resources>