<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Üst kısımda büyük metin -->
    <TextView
        android:id="@+id/tvWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Sign up free butonu -->
    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="16sp" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/buttonSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Log in metni (tıklanabilir) -->
    <TextView
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textSize="16sp" />
</LinearLayout>



